<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lybaselayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.kisar.sqliteurunlist.View.UrunDetayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eturunAdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/detayurunadi"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/eturunbirifiyat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etbirimfiyat"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/eturunmiktar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etstokmiktari"
            android:inputType="number|numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnkaydet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:background="@android:color/holo_green_dark"
        android:padding="16dp"
        android:text="@string/btnkaydet" />

    <Button
        android:id="@+id/btniptal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.16"
        android:background="@android:color/holo_red_dark"
        android:padding="16dp"
        android:text="@string/btniptal" />

</LinearLayout>
